DDI-Lifecycle/3.3/model/_sources/composite-types/RelationshipType/index.rst.txt
RelationshipType
----------------

Relationship specification between this item and the item to which it is related. Provides a reference to any identifiable object and a description of the relationship.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "RelatedToReference_IdentifiableType",":doc:`/composite-types/IdentifiableType/index`","0..1","Reference to the item within the DDI Instance to which this item is related."
   "RelatedToReference_Versionable",":doc:`/item-types/Versionable/index`","0..1","Reference to the item within the DDI Instance to which this item is related."
   "RelatedToReference_Maintainable",":doc:`/item-types/Maintainable/index`","0..1","Reference to the item within the DDI Instance to which this item is related."
   "RelationshipDescription",":doc:`/composite-types/StructuredStringType/index`","0..1","A description of the nature of the relationship between the parent element of the relationship item and the DDI object to which it is related. Supports multiple language versions of the same content as well as optional formatting of the content."
   "TypeOfRelationship",":doc:`/composite-types/CodeValueType/index`","0..1","Describes how the resource is related to the item. Supports the use of an external controlled vocabulary."


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/OtherMaterial/index`
* :doc:`/composite-types/LifecycleEventType/index`
* :doc:`/composite-types/NoteType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/RelationshipType.svg

